Change java version
21 to 17